--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: uBuild Design Blocks
-author: Forestry.io
-email: support@forestry.io
+title: AI修图 2.0
+author: lvpai
+email: never@lvpy.cn
 description: >-
   ubuild-jekyll is a Jekyll theme desgined to work with Forestry's Blocks feature.
   This theme provides a set of page-level components and a pre-configured Forestry Blocks UI
   that will empower content editors to construct their own webpages.
-baseurl: "/ubuild-jekyll" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # your site's origin, e.g. https://forestry.io
 
 # Build settings
